# microcity

./: README.md  pyproject.toml
notebooks/: curvature.ipynb  heightmap_path.ipynb  resample.ipynb  simple.ipynb
scripts/: interact.py  simplest.py  world.py
src/microcity/: geom.py  terrain.py
src/microcity/test/: test_geom.py
