[project]
name = "microcity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.8.0",
    "jax>=0.4.37",
    "optax>=0.2.4",
    "pygfx>=0.6.0",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-rfb>=0.4.4",
    "matplotlib>=3.9.4",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "simplejpeg>=1.7.6",
]
